[gd_scene load_steps=3 format=3 uid="uid://ca70cgoaj6ldd"]

[ext_resource type="PackedScene" uid="uid://l1gdp5ne82s6" path="res://scenes/code_window/code_editor_ui.tscn" id="1_244ej"]
[ext_resource type="Script" path="res://scripts/code_editor/code_window.gd" id="1_lcw6j"]

[node name="CodeWindow" type="Window" node_paths=PackedStringArray("code_editor_ui")]
position = Vector2i(105, 105)
size = Vector2i(625, 475)
script = ExtResource("1_lcw6j")
code_editor_ui = NodePath("CodeEditorUI")

[node name="CodeEditorUI" parent="." instance=ExtResource("1_244ej")]

[connection signal="kill_pressed" from="CodeEditorUI" to="." method="_on_kill_pressed"]
[connection signal="pause_pressed" from="CodeEditorUI" to="." method="_on_pause_pressed"]
[connection signal="run_pressed" from="CodeEditorUI" to="." method="_on_run_button_pressed"]
